# lumen

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
backend/: main.py  pyproject.toml  redis_services.py  requirements.txt  streaming.py
backend/agent/: graph.py  nodes.py  prompts.py  providers.py  search_providers.py  state.py
backend/auth/: clerk.py  keys.py
backend/documents/: embeddings.py  processor.py  search.py  store.py
backend/domains/: __init__.py  documents.yaml  financial.yaml  general.yaml  legal.yaml  medical.yaml
backend/evals/: judge.py  source_eval.py  store.py
backend/fixtures/: mock_ai_agents_in_software_development_2026.json  mock_comparing_rag_vs_fine-tuning_for_enterpr.json  mock_how_ai_is_transforming_healthcare_diagno.json  mock_how_does_rag_work_in_production_systems.json  mock_remote_work_culture_and_its_effect_on_so.json  mock_response.json  mock_the_future_of_browser-based_development_.json  mock_the_impact_of_llms_on_junior_developer_h.json  mock_the_rise_of_edge_computing_and_its_impac.json  mock_why_open_source_ai_models_are_challengin.json
backend/tests/: conftest.py  test_clerk.py  test_endpoints.py  test_redis_services.py  test_source_eval.py  test_streaming.py
frontend/: middleware.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ActivityFeed.tsx  ApiKeyModal.tsx  AuthProvider.tsx  DocumentUpload.tsx  DraftOutput.tsx  EvalsTable.tsx  ResearchForm.tsx  ScoreChart.tsx  TracePanel.tsx
supabase/: documents_migration.sql
(+10 files in other folders)
