[project]
name = "lumen-backend"
version = "1.0.0"
description = "AI-powered deep research agent — FastAPI backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.34.0",
    "langgraph==1.1.3",
    "langchain-anthropic==1.3.4",
    "tavily-python==0.7.22",
    "langsmith==0.7.16",
    "python-dotenv==1.1.0",
    "pydantic==2.11.0",
    "httpx==0.28.1",
    "pyyaml==6.0.2",
    "supabase==2.13.0",
    "upstash-redis==1.4.0",
    "pyjwt[crypto]==2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "freezegun>=1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
